test/official_tests/this/this_at_top_level.lox
this; // error: {"line":1,"message":"Can't use 'this' outside of a class","type":"RuntimeError"}
